@@ -16,15 +16,15 @@ package org.eclipse.edc.identityhub.core;
 
 
 import org.eclipse.edc.identityhub.defaults.EdcScopeToCriterionTransformer;
+import org.eclipse.edc.identityhub.spi.model.VerifiableCredentialResource;
 import org.eclipse.edc.identityhub.spi.resolution.QueryFailure;
 import org.eclipse.edc.identityhub.spi.store.CredentialStore;
-import org.eclipse.edc.identityhub.spi.store.model.VerifiableCredentialResource;
 import org.eclipse.edc.identitytrust.model.CredentialFormat;
 import org.eclipse.edc.identitytrust.model.CredentialSubject;
 import org.eclipse.edc.identitytrust.model.Issuer;
 import org.eclipse.edc.identitytrust.model.VerifiableCredential;
 import org.eclipse.edc.identitytrust.model.VerifiableCredentialContainer;
-import org.eclipse.edc.identitytrust.model.credentialservice.PresentationQuery;
+import org.eclipse.edc.identitytrust.model.credentialservice.PresentationQueryMessage;
 import org.eclipse.edc.identitytrust.model.presentationdefinition.PresentationDefinition;
 import org.eclipse.edc.spi.result.StoreResult;
 import org.jetbrains.annotations.Nullable;
@@ -33,9 +33,9 @@ import org.junit.jupiter.api.Test;
 import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Stream;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
@@ -46,22 +46,23 @@ import static org.mockito.Mockito.when;
 
 class CredentialQueryResolverImplTest {
 
+    public static final String TEST_PARTICIPANT_CONTEXT_ID = "test-participant";
     private final CredentialStore storeMock = mock();
     private final CredentialQueryResolverImpl resolver = new CredentialQueryResolverImpl(storeMock, new EdcScopeToCriterionTransformer());
 
     @Test
     void query_noResult() {
-        when(storeMock.query(any())).thenAnswer(i -> success(Stream.empty()));
-        var res = resolver.query(createPresentationQuery("org.eclipse.edc.vc.type:TestCredential:read"),
-                List.of("org.eclipse.edc.vc.type:AnotherCredential:read"));
+        when(storeMock.query(any())).thenAnswer(i -> success(List.of()));
+        var res = resolver.query(TEST_PARTICIPANT_CONTEXT_ID,
+                createPresentationQuery("org.eclipse.edc.vc.type:TestCredential:read"), List.of("org.eclipse.edc.vc.type:AnotherCredential:read"));
         assertThat(res.succeeded()).isTrue();
         assertThat(res.getContent()).isEmpty();
     }
 
     @Test
     void query_noProverScope_shouldReturnEmpty() {
-        when(storeMock.query(any())).thenReturn(success(Stream.empty()));
-        var res = resolver.query(createPresentationQuery(), List.of("foobar"));
+        when(storeMock.query(any())).thenReturn(success(Collections.emptyList()));
+        var res = resolver.query(TEST_PARTICIPANT_CONTEXT_ID, createPresentationQuery(), List.of("foobar"));
         assertThat(res.succeeded()).isFalse();
         assertThat(res.reason()).isEqualTo(QueryFailure.Reason.INVALID_SCOPE);
         assertThat(res.getFailureDetail()).contains("Invalid query: must contain at least one scope.");
@@ -69,9 +70,9 @@ class CredentialQueryResolverImplTest {
 
     @Test
     void query_proverScopeStringInvalid_shouldReturnFailure() {
-        when(storeMock.query(any())).thenReturn(success(Stream.empty()));
-        var res = resolver.query(createPresentationQuery("invalid"),
-                List.of("org.eclipse.edc.vc.type:AnotherCredential:read"));
+        when(storeMock.query(any())).thenReturn(success(Collections.emptyList()));
+        var res = resolver.query(TEST_PARTICIPANT_CONTEXT_ID,
+                createPresentationQuery("invalid"), List.of("org.eclipse.edc.vc.type:AnotherCredential:read"));
         assertThat(res.failed()).isTrue();
         assertThat(res.reason()).isEqualTo(QueryFailure.Reason.INVALID_SCOPE);
         assertThat(res.getFailureDetail()).contains("Scope string has invalid format.");
@@ -79,7 +80,7 @@ class CredentialQueryResolverImplTest {
 
     @Test
     void query_scopeStringHasWrongOperator_shouldReturnFailure() {
-        var res = resolver.query(createPresentationQuery("org.eclipse.edc.vc.type:TestCredential:write"), List.of("ignored"));
+        var res = resolver.query(TEST_PARTICIPANT_CONTEXT_ID, createPresentationQuery("org.eclipse.edc.vc.type:TestCredential:write"), List.of("ignored"));
         assertThat(res.failed()).isTrue();
         assertThat(res.reason()).isEqualTo(QueryFailure.Reason.INVALID_SCOPE);
         assertThat(res.getFailureDetail()).contains("Invalid scope operation: write");
@@ -88,30 +89,40 @@ class CredentialQueryResolverImplTest {
     @Test
     void query_singleScopeString() {
         var credential = createCredentialResource("TestCredential");
-        when(storeMock.query(any())).thenAnswer(i -> success(Stream.of(credential)));
-        var res = resolver.query(createPresentationQuery("org.eclipse.edc.vc.type:TestCredential:read"),
-                List.of("org.eclipse.edc.vc.type:TestCredential:read"));
+        when(storeMock.query(any())).thenAnswer(i -> success(List.of(credential)));
+        var res = resolver.query(TEST_PARTICIPANT_CONTEXT_ID,
+                createPresentationQuery("org.eclipse.edc.vc.type:TestCredential:read"), List.of("org.eclipse.edc.vc.type:TestCredential:read"));
         assertThat(res.succeeded()).withFailMessage(res::getFailureDetail).isTrue();
         assertThat(res.getContent()).containsExactly(credential.getVerifiableCredential());
+    }
+
+    @Test
+    void query_whenParticipantIdMismatch_expectEmptyResult() {
+        when(storeMock.query(any())).thenAnswer(i -> success(List.of()));
+
+        var res = resolver.query("another_participant_id",
+                createPresentationQuery("org.eclipse.edc.vc.type:TestCredential:read"), List.of("org.eclipse.edc.vc.type:TestCredential:read"));
+        assertThat(res.succeeded()).isTrue();
+        assertThat(res.getContent()).isEmpty();
     }
 
     @Test
     void query_multipleScopeStrings() {
         var credential1 = createCredentialResource("TestCredential");
         var credential2 = createCredentialResource("AnotherCredential");
-        when(storeMock.query(any())).thenAnswer(i -> success(Stream.of(credential1, credential2)));
+        when(storeMock.query(any())).thenAnswer(i -> success(List.of(credential1, credential2)));
 
-        var res = resolver.query(createPresentationQuery("org.eclipse.edc.vc.type:TestCredential:read",
-                        "org.eclipse.edc.vc.type:AnotherCredential:read"),
-                List.of("org.eclipse.edc.vc.type:TestCredential:read", "org.eclipse.edc.vc.type:AnotherCredential:read"));
+        var res = resolver.query(TEST_PARTICIPANT_CONTEXT_ID,
+                createPresentationQuery("org.eclipse.edc.vc.type:TestCredential:read",
+                        "org.eclipse.edc.vc.type:AnotherCredential:read"), List.of("org.eclipse.edc.vc.type:TestCredential:read", "org.eclipse.edc.vc.type:AnotherCredential:read"));
         assertThat(res.succeeded()).withFailMessage(res::getFailureDetail).isTrue();
         assertThat(res.getContent()).containsExactlyInAnyOrder(credential1.getVerifiableCredential(), credential2.getVerifiableCredential());
     }
 
     @Test
     void query_presentationDefinition_unsupported() {
-        var q = PresentationQuery.Builder.newinstance().presentationDefinition(PresentationDefinition.Builder.newInstance().id("test-pd").build()).build();
-        assertThatThrownBy(() -> resolver.query(q, List.of("org.eclipse.edc.vc.type:SomeCredential:read")))
+        var q = PresentationQueryMessage.Builder.newinstance().presentationDefinition(PresentationDefinition.Builder.newInstance().id("test-pd").build()).build();
+        assertThatThrownBy(() -> resolver.query(TEST_PARTICIPANT_CONTEXT_ID, q, List.of("org.eclipse.edc.vc.type:SomeCredential:read")))
                 .isInstanceOf(UnsupportedOperationException.class)
                 .hasMessage("Querying with a DIF Presentation Exchange definition is not yet supported.");
     }
@@ -120,12 +131,12 @@ class CredentialQueryResolverImplTest {
     void query_requestsTooManyCredentials_shouldReturnFailure() {
         var credential1 = createCredentialResource("TestCredential");
         var credential2 = createCredentialResource("AnotherCredential");
-        when(storeMock.query(any())).thenAnswer(i -> success(Stream.of(credential1, credential2)))
-                .thenAnswer(i -> success(Stream.of(credential1)));
+        when(storeMock.query(any())).thenAnswer(i -> success(List.of(credential1, credential2)))
+                .thenAnswer(i -> success(List.of(credential1)));
 
-        var res = resolver.query(createPresentationQuery("org.eclipse.edc.vc.type:TestCredential:read",
-                        "org.eclipse.edc.vc.type:AnotherCredential:read"),
-                List.of("org.eclipse.edc.vc.type:TestCredential:read"));
+        var res = resolver.query(TEST_PARTICIPANT_CONTEXT_ID,
+                createPresentationQuery("org.eclipse.edc.vc.type:TestCredential:read",
+                        "org.eclipse.edc.vc.type:AnotherCredential:read"), List.of("org.eclipse.edc.vc.type:TestCredential:read"));
 
         assertThat(res.failed()).isTrue();
         assertThat(res.reason()).isEqualTo(QueryFailure.Reason.UNAUTHORIZED_SCOPE);
@@ -135,10 +146,10 @@ class CredentialQueryResolverImplTest {
     @Test
     void query_moreCredentialsAllowed_shouldReturnOnlyRequested() {
         var credential1 = createCredentialResource("TestCredential");
-        when(storeMock.query(any())).thenAnswer(i -> success(Stream.of(credential1)));
+        when(storeMock.query(any())).thenAnswer(i -> success(List.of(credential1)));
 
-        var res = resolver.query(createPresentationQuery("org.eclipse.edc.vc.type:TestCredential:read"),
-                List.of("org.eclipse.edc.vc.type:TestCredential:read", "org.eclipse.edc.vc.type:AnotherCredential:read"));
+        var res = resolver.query(TEST_PARTICIPANT_CONTEXT_ID,
+                createPresentationQuery("org.eclipse.edc.vc.type:TestCredential:read"), List.of("org.eclipse.edc.vc.type:TestCredential:read", "org.eclipse.edc.vc.type:AnotherCredential:read"));
 
         assertThat(res.succeeded()).isTrue();
         assertThat(res.getContent()).containsOnly(credential1.getVerifiableCredential());
@@ -147,10 +158,10 @@ class CredentialQueryResolverImplTest {
     @Test
     void query_exactMatchAllowedAndRequestedCredentials() {
         var credential1 = createCredentialResource("TestCredential");
-        when(storeMock.query(any())).thenAnswer(i -> success(Stream.of(credential1)));
+        when(storeMock.query(any())).thenAnswer(i -> success(List.of(credential1)));
 
-        var res = resolver.query(createPresentationQuery("org.eclipse.edc.vc.type:TestCredential:read"),
-                List.of("org.eclipse.edc.vc.type:TestCredential:read"));
+        var res = resolver.query(TEST_PARTICIPANT_CONTEXT_ID,
+                createPresentationQuery("org.eclipse.edc.vc.type:TestCredential:read"), List.of("org.eclipse.edc.vc.type:TestCredential:read"));
 
         assertThat(res.succeeded()).isTrue();
         assertThat(res.getContent()).containsOnly(credential1.getVerifiableCredential());
@@ -160,11 +171,11 @@ class CredentialQueryResolverImplTest {
     void query_requestedCredentialNotAllowed() {
         var credential1 = createCredentialResource("TestCredential");
         var credential2 = createCredentialResource("AnotherCredential");
-        when(storeMock.query(any())).thenAnswer(i -> success(Stream.of(credential1)))
-                .thenAnswer(i -> success(Stream.of(credential2)));
+        when(storeMock.query(any())).thenAnswer(i -> success(List.of(credential1)))
+                .thenAnswer(i -> success(List.of(credential2)));
 
-        var res = resolver.query(createPresentationQuery("org.eclipse.edc.vc.type:TestCredential:read"),
-                List.of("org.eclipse.edc.vc.type:AnotherCredential:read"));
+        var res = resolver.query(TEST_PARTICIPANT_CONTEXT_ID,
+                createPresentationQuery("org.eclipse.edc.vc.type:TestCredential:read"), List.of("org.eclipse.edc.vc.type:AnotherCredential:read"));
 
         assertThat(res.failed()).isTrue();
         assertThat(res.reason()).isEqualTo(QueryFailure.Reason.UNAUTHORIZED_SCOPE);
@@ -177,11 +188,11 @@ class CredentialQueryResolverImplTest {
         var credential2 = createCredentialResource("AnotherCredential");
         var credential3 = createCredentialResource("FooCredential");
         var credential4 = createCredentialResource("BarCredential");
-        when(storeMock.query(any())).thenAnswer(i -> success(Stream.of(credential1, credential2)))
-                .thenAnswer(i -> success(Stream.of(credential3, credential4)));
+        when(storeMock.query(any())).thenAnswer(i -> success(List.of(credential1, credential2)))
+                .thenAnswer(i -> success(List.of(credential3, credential4)));
 
-        var res = resolver.query(createPresentationQuery("org.eclipse.edc.vc.type:TestCredential:read", "org.eclipse.edc.vc.type:AnotherCredential:read"),
-                List.of("org.eclipse.edc.vc.type:FooCredential:read", "org.eclipse.edc.vc.type:BarCredential:read"));
+        var res = resolver.query(TEST_PARTICIPANT_CONTEXT_ID,
+                createPresentationQuery("org.eclipse.edc.vc.type:TestCredential:read", "org.eclipse.edc.vc.type:AnotherCredential:read"), List.of("org.eclipse.edc.vc.type:FooCredential:read", "org.eclipse.edc.vc.type:BarCredential:read"));
 
         assertThat(res.succeeded()).isFalse();
         assertThat(res.reason()).isEqualTo(QueryFailure.Reason.UNAUTHORIZED_SCOPE);
@@ -193,17 +204,17 @@ class CredentialQueryResolverImplTest {
         var credential1 = createCredentialResource("TestCredential");
         when(storeMock.query(any())).thenReturn(StoreResult.notFound("test-failure"));
 
-        var res = resolver.query(createPresentationQuery("org.eclipse.edc.vc.type:TestCredential:read"),
-                List.of("org.eclipse.edc.vc.type:AnotherCredential:read"));
+        var res = resolver.query(TEST_PARTICIPANT_CONTEXT_ID,
+                createPresentationQuery("org.eclipse.edc.vc.type:TestCredential:read"), List.of("org.eclipse.edc.vc.type:AnotherCredential:read"));
 
         assertThat(res.failed()).isTrue();
         assertThat(res.reason()).isEqualTo(QueryFailure.Reason.STORAGE_FAILURE);
         assertThat(res.getFailureDetail()).isEqualTo("test-failure");
     }
 
-    private PresentationQuery createPresentationQuery(@Nullable String... scope) {
+    private PresentationQueryMessage createPresentationQuery(@Nullable String... scope) {
         var scopes = new ArrayList<>(Arrays.asList(scope));
-        return PresentationQuery.Builder.newinstance().scopes(scopes).build();
+        return PresentationQueryMessage.Builder.newinstance().scopes(scopes).build();
     }
 
     private VerifiableCredentialResource createCredentialResource(String... type) {
@@ -217,6 +228,7 @@ class CredentialQueryResolverImplTest {
                 .credential(new VerifiableCredentialContainer("foobar", CredentialFormat.JSON_LD, cred))
                 .holderId("test-holder")
                 .issuerId("test-issuer")
+                .participantId(TEST_PARTICIPANT_CONTEXT_ID)
                 .build();
     }
 }
